    config.fixture_path = RAILS_ROOT + '/spec/fixtures'
  end

You can now use mocha or flexmock with RSpec if you prefer either to
RSpec's own mock framework. Just put this:

  Spec::Runner.configure do |config|
    config.mock_with :mocha
  end
  
or this:

  Spec::Runner.configure do |config|
    config.mock_with :flexmock
  end
  
in a file that is loaded before your specs.

* Sugar FREE!
* Added another formatter: failing_behaviours. Writes the names of the failing behaviours for use with --example.
* Applied [#10315] Patch to fix pre_commit bug 10313 - pre_commit_rails: doesn't always build correctly (Patch from Antii Tarvainen)
* Applied [#10245] Patch to HTML escape the behavior name when using HTML Formatter (Patch from Josh Knowles)
* Applied [#10410] redirect_to does not behave consistently with regards to query string parameter ordering (Patch from Nicholas Evans)
* Applied [#9605] Patch for ER 9472, shared behaviour (Patch by Bob Cotton)
* --format rdoc no longer causes a dry-run by default. --dry-run must be used explicitly.
* It's possible to specify the output file in the --format option (See explanation in --help)
* Several --format options may be specified to output several formats in one run.
* The --out option is gone. Use --format html:path/to/my.html instead (or similar).
* Spec::Runner::Formatter::BaseTextFormatter#initialize only takes one argument - an IO. dry_run and color are setters.
* Made Spec::Ui *much* easier to install. It will be released separately. Check out trunk/spec_ui/examples
* HTML reports now include a syntax highlighted snippet of the source code where the spec failed (needs the syntax gem)
* Added [#10262] Better Helper testing of Erb evaluation block helpers
* Added [#9735] support flexmock (thanks to Jim Weirich for his modifications to flexmock to support this)
* Spec::Rails controller specs will no longer let mock exception ripple through to the response.
* Fixed [#9260] IvarProxy does not act like a hash.