@@ -2,6 +2,7 @@ require 'spec/matchers/be'
 require 'spec/matchers/be_close'
 require 'spec/matchers/change'
 require 'spec/matchers/eql'
+require 'spec/matchers/exist'
 require 'spec/matchers/equal'
 require 'spec/matchers/has'
 require 'spec/matchers/have'
