@@ -45,6 +45,7 @@ or this:
 in a file that is loaded before your specs.
 
 * Sugar FREE!
+* Applied [#10473] Add should exist (new matcher) - Patch from Bret Pettichord
 * Added another formatter: failing_behaviours. Writes the names of the failing behaviours for use with --example.
 * Applied [#10315] Patch to fix pre_commit bug 10313 - pre_commit_rails: doesn't always build correctly (Patch from Antii Tarvainen)
 * Applied [#10245] Patch to HTML escape the behavior name when using HTML Formatter (Patch from Josh Knowles)
